--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
-    About
+    <div id='root'></div>
+  <script src='/js/bundle.js'></script>
   </body>
 </html>
