--- a/src/views/reactApp.ejs
+++ b/src/views/reactApp.ejs
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Dev Jobs</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../client/js/components/css/Header.css">
   </head>
   <body>
     <div id="app-container">
-      
+
     </div>
     <script src="/js/bundle.js"></script>
   </body>
