prov & matprim register

--- a/src/views/reactApp.ejs
+++ b/src/views/reactApp.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dev Jobs</title>
+    <title>FEEDSTOCK</title>
     <link rel="stylesheet" href="../client/js/components/css/Header.css">
   </head>
   <body>
