--- a/src/client/js/components/css/Header.css
+++ b/src/client/js/components/css/Header.css
@@ -1,18 +1,19 @@
-
 .title {
   text-align: center;
   font-size: 30px;
   color: green;
 }
 
+
 .header-container {
-  width: 100%;
+  width: 95%;
+  height: 100px;
   margin: 0 auto;
   border: 2px solid blue;
   color: red;
   }
 
-  .menu {
+.menu {
     padding-left: 0;
     list-style-type: none;
     display: flex;
