--- a/src/client/js/components/css/Home.css
+++ b/src/client/js/components/css/Home.css
@@ -1,3 +1,9 @@
-body {
-  background-color: purple;
+.image-container {
+  width: 100%;
+  border: 3px solid green;
+  }
+
+.image-container img {
+  width: 95%;
+  margin: 0 auto;
 }
