--- a/src/client/js/components/css/Home.css
+++ b/src/client/js/components/css/Home.css
@@ -1,9 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Exo+2|Lobster');
+
 .image-container {
   width: 100%;
-  border: 3px solid green;
-  }
+
+ }
 
 .image-container img {
-  width: 95%;
+  width: 100%;
+  height: 550px;
   margin: 0 auto;
+  opacity: 0.7;
+  position: relative;
+  }
+
+.image-container p {
+  font-family: 'Lobster', cursive;
+  color: green;
+  font-size: 120px;
+  position: initial ;
+
 }
