--- a/src/client/js/components/css/About.css
+++ b/src/client/js/components/css/About.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
 .about-container {
   width: 100%;
 }
@@ -6,4 +8,25 @@
   width: 90%;
   height: 150px;
   margin-left: 60px ;
+}
+
+.card-title img{
+  width: 50%;
+  margin-left: 300px;
+}
+
+.slide {
+  color: black;
+  text-align: justify;
+}
+
+.span {
+  font-family: 'Nunito', sans-serif;
+  font-size: 18px;
+  color: white;
+}
+
+.span-container {
+  width:75%;
+  margin: 0 auto;
 }
