--- a/src/client/js/components/css/Formulas.css
+++ b/src/client/js/components/css/Formulas.css
@@ -2,3 +2,26 @@
   width: 90%;
   margin: 0 auto;
 }
+
+.row-container {
+  width: 80%;
+  margin: 0 auto;
+  border: 1px solid white;
+  background-color: #939292;
+}
+
+.span-container {
+  width: 100%;
+  height: 25px;
+}
+
+.enlace {
+  color: black;
+}
+
+.title {
+  margin: 0 auto;
+  color: black;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
