--- a/src/client/js/components/css/Home.css
+++ b/src/client/js/components/css/Home.css
@@ -5,22 +5,25 @@ body {
 }
 
 .image-container {
-  width: 100%;
-
+  width: 50%;
+  margin: 0 auto;
  }
 
-.image-container img {
+.imagen {
   width: 100%;
   height: 550px;
   margin: 0 auto;
   opacity: 0.3;
-  position: relative;
+  border-radius: 100%;
+  position: block;
   }
 
-.image-container p {
+.title-home {
+  position: absolute;
+  color: black;
   font-family: 'Lobster', cursive;
-  color: green;
-  font-size: 120px;
-  position: initial ;
-
+  font-size: 100px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -90%);
 }
